K8S/app-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: hotel-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: walkorion/hotels_kol-web:latest
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: hotel-app
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
